monitoring-micrometrics-grafana-prometheus/src/main/jkube/raw/grafana-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grafana
  label:
    app: grafana
spec:
  strategy:
    type: RollingUpdate
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      volumes:
        - name: config
          configMap:
            name: grafana-dashboards
            items:
              - key: dashboard.yml
                path: dashboard.yml
              - key: dashboard-camel.json
                path: dashboard-camel.json
        - name: datasource
          configMap:
            name: grafana-datasources
            items:
              - key: datasources.yml
                path: datasources.yml
      containers:
        - name: container
          image: grafana/grafana
          volumeMounts:
            - mountPath: /etc/grafana/provisioning/dashboards
              name: config
            - mountPath: /etc/grafana/provisioning/datasources
              name: datasource
          ports:
            - containerPort: 9090
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
