monitoring-micrometrics-grafana-prometheus/src/main/jkube/raw/camel-example-spring-boot-monitoring-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: ${project.artifactId}
  labels:
    clusterId: eu-west
    app_kubernetes_io_name: monitoring-app
    app_kubernetes_io_part_of: csb-examples
    app_kubernetes_io_instance: 1
    app_kubernetes_io_version: ${project.version}
    app_kubernetes_io_component: integration
  annotations:
    prometheus.io/port: 8080
    prometheus.io/path: /actuator/prometheus
    prometheus.io/scrape: "true"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
      app: ${project.artifactId}
