monitoring-micrometrics-grafana-prometheus/src/main/jkube/raw/prometheus-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
spec:
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      name: prometheus
  internalTrafficPolicy: Cluster
  selector:
    app: prometheus
